--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -38,8 +38,8 @@ template(name='login')
                         //- +i name='forgot-password' classes='ui mini inline image'                    
                         //- i.refresh.icon
                         |forgot password
-                //- .ui.center.aligned.inline.header see the front desk to register an account
-                    //- a.ui.large.basic.button(href='/register') 
-                    //-     //- +i name='add-user-male' classes='ui mini inline image'                    
-                    //-     i.user.plus.icon
-                    //-     |register
+                    a.ui.large.button(href='/register') 
+                        //- +i name='add-user-male' classes='ui mini inline image'                    
+                        //- i.user.plus.icon
+                        |register
+                    //- .ui.center.aligned.inline.header see the front desk to register an account
