--- a/components/accounts/reset_password.jade
+++ b/components/accounts/reset_password.jade
@@ -10,18 +10,18 @@ template(name='forgot_password')
                     h4.ui.center.aligned.header #{message}
                 .ui.center.aligned.basic.segment
                     .ui.inline.header
-                        +i name='user'
+                        //- +i name='user'
                         | username
-                    .ui.left.icon.large.input(class=login_class)
+                    .ui.large.input(class=login_class)
                         input.username(type='text')
-                    .ui.circular.blue.submit.button.submit_username submit
-                    .ui.dividing.header or
+                    .ui.circular.submit.button.submit_username submit
+                    .ui.header or
                     .ui.inline.header
-                        +i name='email'
+                        //- +i name='email'
                         | email
-                    .ui.left.icon.labeled.large.input
+                    .ui.labeled.large.input
                         input.email(type='email')
-                    .ui.circular.blue.submit.button.submit_email submit
+                    .ui.circular.submit.button.submit_email submit
                 if username
                     if logging_in
                         .ui.fluid.large.circular.button.enter(title="Login #{username}" class=enter_class)
@@ -33,10 +33,10 @@ template(name='forgot_password')
                             a(href='/register') register
                 .ui.center.aligned.basic.segment    
                     a.ui.circular.big.basic.button(href='/login') 
-                        +i name='enter-2' classes='ui mini inline image'
+                        //- +i name='enter-2' classes='ui mini inline image'
                         |login
                     a.ui.circular.big.basic.button(href='/register')
-                        +i name='add-user-male' classes='ui mini inline image'
+                        //- +i name='add-user-male' classes='ui mini inline image'
                         |register
 
 
@@ -51,12 +51,12 @@ template(name='reset_password')
                 form#reset_password_form.ui.form
                     .field
                         label password
-                        .ui.left.icon.input
+                        .ui.input
                             input.password1(type='password')
-                            i.lock.icon
-                    .field
-                        label password 2
-                        .ui.left.icon.input
-                            input.password2(type='password')
-                            i.lock.icon
+                            //- i.lock.icon
+                    //- .field
+                    //-     label password 2
+                    //-     .ui.input
+                    //-         input.password2(type='password')
+                    //-         //- i.lock.icon
                     button.ui.submit.button(type='submit') Submit
