--- a/client/home.jade
+++ b/client/home.jade
@@ -18,8 +18,7 @@ template(name='home')
                     |offers
                 .ui.grey.header
                     |for sale
-                .ui.grey.header
-                    |rentals
+                +rental_small
                 .ui.grey.header
                     |polls
                 .mediumscroll
@@ -28,7 +27,7 @@ template(name='home')
                     
             .five.wide.column
                 +requests_small
-                +services_small
+                +service_small
                 +karma_leaderboard
                 +work_order_small
                 //- .ui.hidden.divider
@@ -133,6 +132,75 @@ template(name='requests_small')
     .ui.grey.header 
         |requests
 
+template(name='shop_small')
+    .ui.header 
+        +i name='shop'
+        |for sale
+    .ui.relaxed.big.list
+        each products 
+            .item
+                if image
+                    img.ui.mini.inline.image(src="{{c.url image width=300 height=300 gravity='face' crop='fill'}}")
+                if picture
+                    img.ui.mini.inline.image(src="{{c.url picture width=300 height=300 gravity='face' crop='fill'}}")
+                .ui.grey.inline.small.header 
+                    |#{title}
+    
+
+template(name='rental_small')
+    .ui.header
+        +i name='rent'
+        |rentals
+    .ui.big.relaxed.list
+        each rentals 
+            .item
+                a(href="/kiosk_rental_view/#{_id}")
+                    if image
+                        img.ui.mini.inline.image(src="{{c.url image width=300 height=300 gravity='face' crop='fill'}}")
+                    if picture
+                        img.ui.mini.inline.image(src="{{c.url picture width=300 height=300 gravity='face' crop='fill'}}")
+                    .ui.grey.inline.small.header 
+                        |#{title}
+            //- div
+            //- .ui.horizontal.list
+            //-     .item
+            //-         span(title='transactions')
+            //-             i.route.icon
+            //-             |#{transaction_count}
+            //-     .item
+            //-         span(title='money earned')
+            //-             i.money.icon
+            //-             |#{money_earned}
+            
+
+template(name='service_small')
+    .ui.header
+        +i name='service'
+        |services
+    .ui.big.relaxed.list
+        each services
+            .item
+                if image
+                    img.ui.mini.inline.image(src="{{c.url image width=300 height=300 gravity='face' crop='fill'}}")
+                if picture
+                    img.ui.mini.inline.image(src="{{c.url picture width=300 height=300 gravity='face' crop='fill'}}")
+                .content
+                    .header
+                        a(href="/kiosk_service_view/#{_id}")
+                            .ui.small.grey.inline.header 
+                                |#{title}
+                    //- .description
+                    //-     .ui.horizontal.list
+                    //-         .item
+                    //-             span(title='transactions')
+                    //-                 i.route.icon
+                    //-                 |#{transaction_count}
+                    //-         .item
+                    //-             span(title='money earned')
+                    //-                 i.money.icon
+                    //-                 |#{money_earned}
+
+
 
 
 template(name='stats_small')
@@ -155,11 +223,11 @@ template(name='stats_small')
     div
     .ui.inline.grey.header
         strong #{hsd.registered_owners}
-        small owners
+        small registered owners
     div
     .ui.inline.grey.header
         strong #{hsd.registered_residents}
-        small residents
+        small registered residents
     
     
 template(name='gallery_small')
@@ -226,12 +294,12 @@ template(name='leaderboard_small')
     
 
 
-template(name='services_small')
-    a.ui.grey.header(href="/m/service")
-        |services
-    .ui.link.list
-        each services 
-            a.item(href="/service/#{_id}/view") #{title}
+//- template(name='services_small')
+//-     a.ui.grey.header(href="/m/service")
+//-         |services
+//-     .ui.link.list
+//-         each services 
+//-             a.item(href="/service/#{_id}/view") #{title}
 
 template(name='service_slider')
     //- #layerslider(style='width:100%; height: 400px;')
@@ -359,10 +427,7 @@ template(name='poll_results')
     a.ui.inline.small.grey.header(href="/vote/#{_id}/view") #{title}
     i.thumbs.up.outline.inline.icon
     |#{upvoter_ids.length}
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    &nbsp;
+    div
     i.thumbs.down.outline.inline.icon
     | #{downvoter_ids.length}
     .ui.hidden.divider
