--- a/components/commerce/food.jade
+++ b/components/commerce/food.jade
@@ -50,11 +50,11 @@ template(name='marketplace_widget')
 
 
 
-template(name='meal_card')
+template(name='food_card_template')
     .ui.stackable.grid.segment
         .four.wide.column
             //- img.ui.fluid.image(src="{{c.url image }}")
-            img.ui.fluid.rounded.image(src="{{c.url picture width=200 height=300 crop='fill'}}")
+            img.ui.fluid.rounded.image(src="{{c.url picture width=200 height=300 crop='fit'}}")
         .twelve.wide.column
             .ui.header #{title}
             +ismall name='food'
