--- a/components/commerce/rental.jade
+++ b/components/commerce/rental.jade
@@ -5,22 +5,24 @@ template(name='rental_card_template')
                 a.ui.inline.header(href="/service/#{_id}/view") #{title} 
                     if variable_price
                         |~
-                    |$#{hourly_rate}/hr
+                    .ui.basic.label $#{hourly_rate}/hr
+                    .ui.basic.label $#{daily_rate}/day
         .row
             .four.wide.column
-                a(href="/service/#{_id}/view")
-                    +image_view key='image' label='image' direct=true
+                a.zoom(href="/service/#{_id}/view")
+                    if image
+                        +image_view key='image' direct=true classes='zoom'
+                    if picture
+                        +image_view key='picture' direct=true classes='zoom'
             .twelve.wide.column
                 div
-                i.grey.marker.icon
-                //- .ui.grey.inline.header location
+                .ui.grey.inline.header location
                 each location_tags
-                    .ui.label #{this}
+                    .ui.basic.label #{this}
                 div
-                i.grey.tags.icon
-                //- .ui.grey.inline.header tags
+                .ui.grey.inline.header tags
                 each tags
-                    .ui.label #{this}
+                    .ui.basic.label #{this}
                 +single_user_view key='resident' label='resident' direct=true
                 div
                 +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
@@ -159,3 +161,29 @@ template(name='rental')
         //- if rental_days
             .ui.header #{rental_days} days at $#{daily_rental_price}/day
         //- .ui.header #{rental_days} days at $#{daily_rental_price}/day
+
+
+
+
+template(name='kiosk_rental_view')
+    with current_doc
+        .ui.padded.stackable.grid
+            a.ui.fluid.big.button(href="/healthclub")
+                i.left.chevron.large.icon
+                |back
+            .eight.wide.column
+                +image_view key='image' direct=true
+            .eight.wide.column
+                h1.ui.header #{title}
+                |!{description}
+                .ui.header $#{hourly_rate}/hr
+                .ui.header $#{daily_rate}/day
+                .ui.header #{views} views
+                +voting
+                .ui.big.button.send_message send message
+                if sending_message
+                    .ui.header sending message
+                    .ui.input 
+                        input(type='text' placeholder='hi')
+                    .ui.big.button.cancel_message cancel
+                    
